# neuron-suppression-awareness

./: .gitignore  pyproject.toml
configs/: backend.transformers.yaml  backend.vllm_lens.yaml  model.qwen3_8b.yaml  phase0.qwen3_8b.kaggle_t4.yaml  phase0.qwen3_8b.yaml  phase1.qwen3_8b.kaggle_t4.yaml  phase2a.qwen3_8b.kaggle_t4.yaml  phase2b.qwen3_8b.kaggle_t4.yaml  phase3.qwen3_8b.kaggle_t4.yaml  phase4.qwen3_8b.kaggle_t4.yaml
kaggle/: kernel-metadata.json  prepare_kernel.py  run_phase0.py
kaggle/phase1/: kernel-metadata.json  run_phase1.py
kaggle/phase2a/: kernel-metadata.json  run_phase2a.py
kaggle/phase2b/: kernel-metadata.json  run_phase2b.py
kaggle/phase3/: kernel-metadata.json  run_phase3.py
kaggle/phase4/: kernel-metadata.json  run_phase4.py
results/phase1/: README.md  phase1_results.json
src/neuron_suppression_awareness/: __init__.py  artifacts.py  caa_extraction.py  checkpoint.py  cli.py  concepts.py  config.py  datasets.py  errors.py  hooks.py  judge.py  phase2b.py  refusal.py  training_data.py
src/neuron_suppression_awareness/backends/: __init__.py  phase1_transformers.py  phase2a_transformers.py  vllm_lens.py  (+4 more)
tests/: test_artifacts.py  test_asr.py  test_checkpoint.py  test_concepts.py  test_config.py  test_datasets.py  test_hooks.py  test_judge.py  test_phase1_config.py  test_phase2a_config.py  test_phase2b.py  test_phase2b_config.py  test_phase3_config.py  test_phase3_metrics.py  test_phase4_config.py  test_phase4_metrics.py  test_refusal.py  test_residual_hook.py  test_training_data.py  test_transformers_backend.py  test_vllm_lens.py
